--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "repository": "",
   "author": "Gilles Ruppert <gilles@madeofbytes.com>",
-  "license": "BSD"
+  "license": "BSD",
+  "dependencies": {
+    "johnny-five": "~0.5.14"
+  }
 }
